fixing/fixing navbar margin on mobile

--- a/src/assets/styles/app-style.css
+++ b/src/assets/styles/app-style.css
@@ -72,10 +72,6 @@ h3 {
     place-items: flex-start;
     flex-wrap: wrap;
   }
-
-  nav {
-    margin-bottom: 3.5em;
-  }
   
   .about {
     min-height: 100vh;
