--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -394,7 +394,7 @@ h2.client {
 
 @media (max-width: 1024px) {
   .nav-container {
-    margin-bottom: 3.5em;
+    margin-bottom: 1.5em;
   }
 }
 
@@ -484,12 +484,6 @@ h2.client {
 
 @media (max-width: 717px) and (max-height: 512px) {
   .nav-container {
-    width: 100%;
-    margin-bottom: 0;
-    border: none;
-    border-top: 1px solid var(--color-border);
-    border-radius: 8px 8px 0 0;
-    height: 200px;
-    bottom: -135px;
+    margin-bottom: 1em;
   }
 }
